[project]
name = "comfyui-saveimagecivitai"
description = "A custom node allowing to save images with CIVITAI readable datas"
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/Wakfull33/ComfyUI-SaveImageCivitAI"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-SaveImageCivitAI"
Icon = ""
